--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
+DB_HOST=turntable.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=admin123
-DB_NAME=mazacard_db
+DB_PASSWORD=ttLMKerqmussWnaXiwKwNSifItJOHROU
+DB_NAME=railway
